--- a/consul/files/systemd/consul_service_unit.jinja
+++ b/consul/files/systemd/consul_service_unit.jinja
@@ -14,6 +14,10 @@ KillMode=process
 Restart=on-failure
 RestartSec=42s
 LimitNOFILE=65536
+{%- if capabilities is defined -%}
+CapabilityBoundingSet={{ capabilities }}
+AmbientCapabilities={{ capabilities }}
+{%- endif -%}
 
 [Install]
 WantedBy=multi-user.target
